--- a/css/app.css
+++ b/css/app.css
@@ -1,6 +1,9 @@
 html,
 body {
-    position: relative;
+    position: fixed;
+    left: 50%;
+    transform: translateX(-50%);
+    /* position: relative; */
     height: 100%;
     width: 100%;
     /* 70% of screen height */
